# Blurly

./: .gitignore  404.html  README.md  __init__.py  _native.py  build_engine.bat  engine.py  index.html  mkdocs.yml  objects.inv  overlay.py  presets.py  pyproject.toml  structs.py
api/: index.html
assets/: generate.py
docs/: api.md  index.md  presets.md  tutorials.md
examples/: __init__.py  demo_framed.py  demo_frameless.py
presets/: index.html
search/: search_index.json
shaders/: BlurlyH.hlsl  BlurlyV.hlsl
src/: BlurlyEngine.cpp
tutorials/: index.html
