[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blurly"
version = "0.1.0"
description = "GPU-accelerated glass blur framework for Windows using D3D11"
readme = "README.md"
authors = [{name = "Eevee8340"}]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.0.0",
]

[tool.setuptools]
packages = ["blurly"]
package-dir = {"blurly" = "."}

[tool.setuptools.package-data]
blurly = ["shaders/*.hlsl", "assets/presets/*.raw", "bin/*.dll"]
